--- a/ripo.html
+++ b/ripo.html
@@ -22,6 +22,7 @@
             color: var(--Dark-01, #181818);
             font-size: 45px;
             font-weight: 800;
+            margin: 0 200px;
         }
         .text-primary{
             color: #FD6E0A;
@@ -49,10 +50,17 @@
             text-decoration: none;
             color: var(--Dark-02, #474747);
         }
+        .header{
+            background-color: #FFF8F3;
+        }
+        .banner{
+            padding:  30px 30px 30px 150px;
+            display: flex;
+        }
     </style>
 </head>
 <body>
-    <header>
+    <header class="header">
      <nav>
         <h3 class="nav">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -61,6 +69,18 @@
            <li><button class="btn-primary">Hire Me</button></li>
         </ul>
      </nav>
+     <div class="banner">
+        <div>
+            <h3 class="banner-greeting">Hi, I am</h3>
+            <h1 class="banner-title">Mary Hardy</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+
+        </div>
+        <img src="images/hardy.png" alt="">
+     </div>
+
     </header>
     <main>
 
