--- a/ripo.html
+++ b/ripo.html
@@ -122,8 +122,27 @@ font-size: 18px;
         .about-info{
             text-align: center;
         }
-       
-
+       .skills-container{
+        display: flex;
+        gap: 24px;
+       }
+       .skill{
+        padding: 30px;
+        border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+       }
+       .skill-description{
+        color: #757575;
+       }
+       .main section{
+        margin-top: 130px;
+       }
+       .resume-column-title{
+        color: #474747;
+font-size: 30px;
+font-weight: 700;
+       }
     </style>
 </head>
 <body>
@@ -177,7 +196,8 @@ font-size: 18px;
     </section>
     <section>
         <h3 class="section-title">What I do</h3>
-        <p id="what-i-do-description" class="section-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        <p id="what-i-do-description" class="section-description">List skill/
+            technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         <div class="skills-container">
             <div class="skill">
                 <img src="images/icons/js.png" alt="">
@@ -200,6 +220,58 @@ font-size: 18px;
                 <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
             
+    </section>
+    <section>
+    <h3 class="section-title">A summary of My Resume</h3>
+     <div class="resume-container">
+        <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+         <div class="resume-item">
+            <h2 class="resume-item-title">Master in Computer Engineering</h2>
+             <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+         </div>
+         <hr> 
+         <div class="resume-item">
+            <h2 class="resume-item-title">Master in Computer Engineering</h2>
+             <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+         </div>
+         <hr>
+         <div class="resume-item">
+            <h2 class="resume-item-title">Master in Computer Engineering</h2>
+             <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+         </div>
+           </div>
+        <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+          <div class="resume-item">
+            <h2 class="resume-item-title">Sr. Font End Developer</h2>
+            <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
+            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h2 class="resume-item-title">Jr. Font End Developer</h2>
+            <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
+            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h2 class="resume-item-title">HTML Developer</h2>
+            <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
+            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+      </div>
+
+     </div>
     </section>
     </main>
     <footer>
