--- a/ripo.html
+++ b/ripo.html
@@ -143,6 +143,34 @@ box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 font-size: 30px;
 font-weight: 700;
        }
+       .resume-container{
+        display: flex;
+        gap: 60px;
+       }
+       .resume-item-institute,.resume-item-description{
+        color:  #757575;
+       }
+       .resume-item-title{
+        color:  #474747;
+font-size: 25px;
+font-weight: 700;
+margin-bottom: 10px;
+       }
+       .resume-item-institute{
+        margin-bottom: 20px;
+        margin-top: 0px;
+        color:  #757575;
+       }
+       .resume-container{
+        margin: 30px;
+       }
+       .download-cv{
+        text-align: center;
+        margin-top: 50px;
+       }
+       .resume-item-description{
+        color: #757575;
+       }
     </style>
 </head>
 <body>
@@ -271,6 +299,9 @@ font-weight: 700;
           </div>
       </div>
 
+     </div>
+     <div class="download-cv">
+     <button class="btn-primary">Download CV</button>
      </div>
     </section>
     </main>
