--- a/ripo.html
+++ b/ripo.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="images/portfolio">
+    <script src="https://kit.Fontawesome.com/f056a62cc9.js"crossorigin="anonymous"></script>
     <style>
         nav{
             display: flex;
@@ -65,9 +66,9 @@
         }
         .header{
             background-color: #FFF8F3;
-            background-image: url('../images/header_bg.png');
+            background-image: url('../images/header_bg.png'), url('../images/developer.png');
             background-repeat: no-repeat;
-            background-position: bottom right;
+            background-position: bottom right, top left;
             
         }
         .banner-{
@@ -213,8 +214,8 @@ border: 0;
             <h3 class="banner-greeting">Hi, I am</h3>
             <h1 class="banner-title">Mary Hardy</h1>
 <p class="banner">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button class="btn-ec">Download CV</button>
-            <button class="btn-primary">Contact</button>
+            <button class="btn-ec"><i class="fa-solid fa-download"></i>Download CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-phone"></i>Contact</button>
 
         </div>
         <img src="images/hardy.png" alt="">
@@ -326,7 +327,7 @@ border: 0;
 
      </div>
      <div class="download-cv">
-     <button class="btn-primary">Download CV</button>
+     <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
      </div>
     </section>
     </main>
